front-pcs/base/resources/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-pcs
  labels:
    app: front-pcs
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '80'
spec:
  selector:
    app: front-pcs
  # type: NodePort
  ports:
  - name: front-pcs
    port: 80
    targetPort: 80
    # nodePort: 30002
