front-pcs/base/resources/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.priority: "5"
    traefik.ingress.kubernetes.io/router.middlewares: pcs-https@kubernetescrd, pcs-headers@kubernetescrd
    # traefik.ingress.kubernetes.io/preserve-host: "true"
    # traefik.ingress.kubernetes.io/pass-tls-cert: "true"
    # traefik.ingress.kubernetes.io/frontend-entry-points: https
    # traefik.ingress.kubernetes.io/redirect-entry-point: https
    # traefik.ingress.kubernetes.io/redirect-permanent: "true"
    # ingress.kubernetes.io/ssl-redirect: "true"
    # ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
    # ingress.kubernetes.io/content-security-policy: "default-src *; style-src 'self' 'unsafe-inline'; img-src * 'self'; script-src * 'self' 'unsafe-inline' 'unsafe-eval'"
  name: ingress-front-pcs
spec:
  tls:
  - secretName: pcs-tls-secret
    hosts:
    - "*.paris-pcs.fr"
    - "*.paris-pcs.com"
  rules:
  - host: "*.paris-pcs.fr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-pcs
            port:
              number: 80
  - host: "*.paris-pcs.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-pcs
            port:
              number: 80
